--- a/views/dadacoin.ejs
+++ b/views/dadacoin.ejs
@@ -21,7 +21,7 @@
                 <p>
                     每一次的外送都有可能會需要酌收外送費，也可能沒有，看平台是否有提供優惠而定。如果團訂的人數多，則平分的外送費將降低，反之，如果團訂的人數少，則平分的外送費將會提高。溢繳的外送費將會以達達幣返還，平台若是有折扣優惠等，也會以達達幣返還，<span style="font-weight: bold">100達達幣=1元</span>，可於下次訂餐時折抵，折抵無上限！
                 </p>
-                <a href="/menu/getMenu" class="primary-btn text-uppercase">去訂餐</a>
+                <a href="/menu/getMenu?groupId=20200430" class="primary-btn text-uppercase">去訂餐</a>
             </div>
         </div>
     </div>
